# acp-tui

./: .gitignore  README.md  pyproject.toml
src/acp_tui/: __main__.py  acp_client.py  app.py
tests/: test_cancel_turn.py
