[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acp-tui"
version = "0.1.1"
description = "Minimal debugger TUI for the Agent Client Protocol (ACP). Connects to any ACP-over-WebSocket server and displays raw protocol frames. Compatible with acp-mux for multi-subscriber sessions."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Logan Saether" }]
dependencies = [
    "textual>=0.60",
    "websockets>=12",
]

[project.scripts]
acp-tui = "acp_tui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/acp_tui"]
